# chichi

./: .gitignore  README.md  actions.py  classifier.py  compute.py  embeddings.py  main.py  merge.py  pyproject.toml  server.py  teams.py
data-mining/: charades-dataset.py
