[project]
name = "chichi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lap>=0.5.12",
    "modal>=1.3.2",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "ultralytics>=8.4.9",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
